# Learning

./: .gitignore
Airflow/: Airflow Notes.md
Best Practices in Projects/: Best Practices in Projects.xlsx  Setup guidelines.md  requirements_base.txt
Best Practices in Projects/Setting up a Project/: Setup virtual env.md  Tools for Python Projects.md
Best Practices in Projects/Useful Utilities for Projects/Loggers/: loggers.ipynb  main.py
Best Practices in Projects/Useful Utilities for Projects/Package Management/: PIP.md  uv.md
Best Practices in Projects/Useful Utilities for Projects/Packaging/: 01 Pyproject.md
Best Practices in Projects/Useful Utilities for Projects/PreCommits/: Pre commits.md
Best Practices in Projects/Useful Utilities for Projects/PreCommits/learn_preCommit/: .gitignore  .pre-commit-config.yaml  .secrets.baseline  pyproject.toml
Best Practices in Projects/Useful Utilities for Projects/Publishing Package/02 uv/test-python-reader-uv/: .gitignore  pyproject.toml
Best Practices in Projects/Useful Utilities for Projects/Pytest/: 01 Pytests.md
Best Practices in Projects/Useful Utilities for Projects/Pytest/learn_pytest/: .gitignore  pyproject.toml
Best Practices in Projects/Useful Utilities for Projects/Pytest/learn_pytest/tests/unit/: conftest.py
Best Practices in Projects/Useful Utilities for Projects/Pytest/learn_pytest/tests/unit/core/: test_math_operations.py
Data Analyst/Data Visualization/Python Visualization/: .gitignore
Data Structures & Algorithms/: .python-version
Data Structures & Algorithms/Algorithmns/Sorting/: 00_sorting.md  01_bubble_sort.py  02_insertion_sort.py  03_selection_sort.py  04_Merge_sort.py  05_quick_sort.py  07_counting_sort.py  08_radix_sort.py  bubble_sort.py  insertion_sort.py  selection_sort.py
Data Structures & Algorithms/Data Structures/LinkedList/: Learning Plan.md  LinkedList_utils.py  __init__.py
Data Visualization/Python Visualization/Matplotlib/: matplotlib.ipynb  matplotlib_quick_start.ipynb
DataEngineering/: .python-version
DataEngineering/ER Diagram/: ER Diagram.md
DataEngineering/Pandas Utility Functions/: .gitignore  pandas useful settings.md  pandas_utils.py  test_pandas_utils.ipynb
DataEngineering/Relational Database/Indexing/: Learning Plan.md
Devops/Docker/: Docker commands.md
Devops/Git/: Git commands.md
Devops/Linux/: Common Tasks and Essential Tools.md  Linux Notes with Commands.md  Part 3: Common Tasks and Essential Tools.md
Devops/MacOs/: Mac OS commands.md
Docker/: Docker notes.md
Gen AI/: .gitignore
Gen AI/Agents/Agno/: Agno_Agents.ipynb
Gen AI/Agents/Langraph/: .gitignore  pyproject.toml
Gen AI/Agents/Langraph/notebooks/module-3/studio/: dynamic_breakpoints.py
Gen AI/Agents/Langraph/notebooks/module-4/studio/: map_reduce.py  parallelization.py  research_assistant.py  sub_graphs.py
Gen AI/Agents/Langraph/notebooks/module-5/studio/: memory_agent.py  memory_store.py  memoryschema_collection.py  memoryschema_profile.py
Gen AI/Agents/Langraph/notebooks/module-6/deployment/: task_maistro.py
Gen AI/Frameworks/langchain/: learn_langchain.ipynb
Gen AI/MCP/: 01 MCP Overview.md
Gen AI/MCP/02 MCP_Anthropic/: .gitignore  mcp_client.py  mcp_server.py  pyproject.toml
Gen AI/Promt Engineering/: Prompt Engineering.ipynb  Prompt Engineering.md
Gen AI/RAG/RAG_Techniques/: helper_functions.py  requirements.txt
Gen AI/Services/openAI/Evals/: payload.json  (+1 more)
HyperParameterOptimization/Optuna/: learn_optuna.ipynb
HyperParameterOptimization/Optuna/.ipynb_checkpoints/: learn_optuna-checkpoint.ipynb
Languages/Markdown/: syntax.md
Languages/Python/: .python-version  learn_requests.ipynb
Languages/Python/Asynchronous/: learn_asynchronous.ipynb
Languages/Python/Fundamentals/: variables.ipynb
Languages/Python/Loggers/: loggers.ipynb  logging_utils.py  test_1.py  test_2.py
Languages/Python/Memory Profiling/: 01 Memory Profiling.md  requirements.txt
Languages/Regex/: learn_regex.ipynb
Languages/SQL/: Learn_SQL.md
Machine Learning/Gen AI/: .gitignore
Machine Learning/Gen AI/Prompt Engineering/: Prompt Engineering.md
Machine Learning/Information Retrieval/01 BM_25/: learn_bm25.ipynb
Machine Learning/Information Retrieval/02 Nearest Neighbours/: 01_learn_KNN_batch_multiprocessing.py  01_learn_KNearestNeighbours.ipynb
Machine Learning/Information Retrieval/03 Inverted File Index/: learn_inverted_file_index.ipynb
Machine Learning/Information Retrieval/04 Product Quantization/: learn_product_quantization.ipynb
Machine Learning/Information Retrieval/05 IVF + PQ/: learn_IVF_PQ.ipynb
MachineLearning/Gen AI/: .gitignore  .python-version  Prompt Engineering.ipynb
Markdown/: syntax.md
Natural Language Processing/: .python-version
Natural Language Processing/00 Concepts/: 01_Levenshtein_Distance.ipynb  02_Fuzzy_Wuzzy.ipynb
Optuna/: learn_optuna.ipynb
Python/: learn_requests.ipynb
Regex/: learn_regex.ipynb
SQL/: Learn_SQL.md
Time Series Forecasting/: Time_Series_concept.ipynb
(+140 files in other folders)
