[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "learn-langgraph"
version = "0.1.0"
description = "Learn LangGraph"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [

]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.black]
line-length = 120
exclude = '''
/(
    notebooks
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["notebooks/*"]
