[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "learn-langgraph"
version = "0.1.0"
description = "Learn LangGraph"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langgraph",
    "langgraph-prebuilt",
    "langgraph-sdk",
    "langgraph-checkpoint-sqlite",
    "langsmith",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "langchain-tavily",
    "trustcall",
    "langgraph-cli[inmem]",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "notebook",
    "wikipedia",
    "pytest>=8.3.5",
    "learn-langgraph",
    "requests>=2.32.5",
]

[tool.black]
line-length = 120
exclude = '''
/(
    notebooks
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["notebooks/*"]

[tool.uv.sources]
learn-langgraph = { workspace = true }
