[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learn_pytest"
version = "0.1.0"
requires-python = ">=3.9"


[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "smoke: smoke tests (basic critical tests)",
]

#[tool.setuptools]
#package-dir = {"" = "src"}

#[tool.setuptools.packages.find]
#where = ["src"]