[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learn_pytest"
version = "0.1.0"
requires-python = ">=3.9"


[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
addopts = """
-vv
--strict-markers
--cov=src
--cov-report=term-missing
--cov-report=html
--cov-fail-under=80
--durations=10
"""
testpaths = ["tests"]
markers = [
    "smoke: smoke tests (basic critical tests)",
    "slow: slow running tests",
]

#[tool.setuptools]
#package-dir = {"" = "src"}

#[tool.setuptools.packages.find]
#where = ["src"]